--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>ENSINAAÊ - Professores particulares pertinho de você</title>
+	<title>ENSINAAÊ - Encontre um professor particular pertinho de você</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="ENSINAAÊ, é uma plataforma que conecta pessoas a professores particulares. Você escolhe o quê, com quem e onde deseja aprender. Simples assim. Ensina aê, vai!"
 	/>
@@ -139,27 +139,27 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 						<div class="row visible-lg">
 							<div class="col-lg-6 col-lg-offset-3">
 								<div class="col-lg-2" rel="tooltip" data-toggle="tooltip" title="Atualidades">
-									<div class="card course" name="atualidades"><img src="imgs/atualidades.svg" alt="atualidades">
+									<div class="card course" name="atualidades"><img src="imgs/atualidades.svg" alt="professor particular atualidades" title="Professor particular de atualidades">
 									</div>
 								</div>
 								<div class="col-lg-2" rel="tooltip" data-toggle="tooltip" title="Biologia">
-									<div class="card course" name="biologia"><img src="imgs/biologia.svg" alt="biologia">
+									<div class="card course" name="biologia"><img src="imgs/biologia.svg" alt="professor particular biologia" title="Professor particular de biologia">
 									</div>
 								</div>
 								<div class="col-lg-2" rel="tooltip" data-toggle="tooltip" title="Inglês">
-									<div class="card course" name="inglês"><img src="imgs/ingles.svg" alt="ingles">
+									<div class="card course" name="inglês"><img src="imgs/ingles.svg" alt="professor particular inglês" title="Professor particular de inglês">
 									</div>
 								</div>
 								<div class="col-lg-2" rel="tooltip" data-toggle="tooltip" title="Física">
-									<div class="card course" name="física"><img src="imgs/fisica.svg" alt="física'">
+									<div class="card course" name="física"><img src="imgs/fisica.svg" alt="professor particular física'" title="Professor particular de física">
 									</div>
 								</div>
 								<div class="col-lg-2" rel="tooltip" data-toggle="tooltip" title="Geografia">
-									<div class="card course" name="geografia"><img src="imgs/geografia.svg" alt="geografia">
+									<div class="card course" name="geografia"><img src="imgs/geografia.svg" alt="professor particular geografia" title="Professor particular de geografia">
 									</div>
 								</div>
 								<div class="col-lg-2" rel="tooltip" data-toggle="tooltip" title="Matemática">
-									<div class="card course" name="matemática"><img src="imgs/matematica.svg" alt="matemática">
+									<div class="card course" name="matemática"><img src="imgs/matematica.svg" alt="professor particular matemática" title="Professoe particular de matemática">
 									</div>
 								</div>
 							</div>
@@ -178,9 +178,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 					<div class="container">
 						<div class="nav-header">
 							<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i></a>
-							<h1 id="fh5co-logo">
-								<a href="#inicio"><img src="imgs/logo_ensinaae_min.png" alt="Logo da ensinaaê" class="logo-header"></a>
-							</h1>
+							<h2 id="fh5co-logo">
+								<a href="#inicio"><img src="imgs/logo_ensinaae_min.png" alt="ENSINAAÊ" class="logo-header" title="ENSINAAÊ"></a>
+							</h2>
 							<nav id="fh5co-menu-wrap" role="navigation">
 								<ul class="sf-menu" id="fh5co-primary-menu">
 									<li>
@@ -224,25 +224,25 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 					<div class="row text-center">
 						<div class="col-lg-3 col-md-12 col-sm-12">
 							<div class="services animate-box">
-								<img src="imgs/mortarboard.svg" alt="Reforço escolar'" class="benefits-icons hvr-grow">
+								<img src="imgs/mortarboard.svg" alt="Aulas particulares reforço escolar" title="Aulas para reforço escolar" class="benefits-icons hvr-grow">
 								<h3>ENEM E VESTIBULARES</h3>
 							</div>
 						</div>
 						<div class="col-lg-3 col-md-12 col-sm-12">
 							<div class="services animate-box">
-								<img src="imgs/megaphone.svg" alt="Idiomas" class="benefits-icons hvr-grow">
+								<img src="imgs/megaphone.svg" alt="aulas particulares idiomas" title="Aulas particulares para idiomas" class="benefits-icons hvr-grow">
 								<h3>IDIOMAS</h3>
 							</div>
 						</div>
 						<div class="col-lg-3 col-md-12 col-sm-12">
 							<div class="services animate-box">
-								<img src="imgs/suitcase.svg" alt="Concursos" class="benefits-icons hvr-grow">
+								<img src="imgs/suitcase.svg" alt="Aulas particulares concursos" title="Aulas particulares para concursos" class="benefits-icons hvr-grow">
 								<h3>CONCURSOS</h3>
 							</div>
 						</div>
 						<div class="col-lg-3 col-md-12 col-sm-12">
 							<div class="services animate-box">
-								<img src="imgs/documentation.svg" alt="Programação'" class="benefits-icons hvr-grow">
+								<img src="imgs/documentation.svg" alt="Aulas particulares programação" title="Aulas particulares para programação" class="benefits-icons hvr-grow">
 								<h3>REDAÇÃO</h3>
 							</div>
 						</div>
@@ -264,7 +264,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 						<div class="col-md-3 col-sm-3">
 							<div class="services animate-box">
 								<!--<span><i class="icon-magnifying-glass"></i></span>-->
-								<img src="imgs/laptop.svg" alt="lupa" class="howto-icons">
+								<img src="imgs/laptop.svg" alt="Computador" title="Computador" class="howto-icons">
 								<h3>Preencha o formulário</h3>
 								<p>Você conta pra gente todas as suas necessidades para ter a melhor aula particular possível, como o que deseja aprender
 									e até quanto quer pagar.
@@ -273,14 +273,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 						<div class="col-md-3 col-sm-3">
 							<div class="services animate-box">
 								<!--<span><i class="icon-calendar"></i></span>-->
-								<img src="imgs/flask.svg" alt="calendário'" class="howto-icons">
+								<img src="imgs/flask.svg" alt="Mágica" title="Mágica" class="howto-icons">
 								<h3>Nós fazemos a mágica</h3>
 								<p>Nós recolhemos as suas informações e cruzamos com os dados dos melhores professores particulares dentro de suas necessidades.</p>
 							</div>
 						</div>
 						<div class="col-md-3 col-sm-3">
 							<div class="services animate-box">
-								<img src="imgs/target.svg" alt="óculos" class="howto-icons">
+								<img src="imgs/target.svg" alt="Alvo" title="Alvo" class="howto-icons">
 								<!--<span><i class="icon-map"></i></span>-->
 								<h3>Receba os melhores</h3>
 								<p>Você recebe em seu e-mail os melhores professores particulares prontos para fazer você atingir todos as suas metas
@@ -290,7 +290,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 						</div>
 						<div class="col-md-3 col-sm-3">
 							<div class="services animate-box">
-								<img src="imgs/trophy.svg" alt="troféu'" class="howto-icons">
+								<img src="imgs/trophy.svg" alt="Troféu" title="Troféu" class="howto-icons">
 								<!--<span><i class="icon-trophy"></i></span>-->
 								<h3>Atinja seus objetivos</h3>
 
@@ -324,7 +324,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 							objetivos! Passar no ENEM ou em concursos públicos nunca foi tão fácil!
 						</div>
 						<div class="col-lg-4 animate-box">
-							<img src="imgs/hero.png" alt="Imagem do aplicativo da ensinaê em um celular" style="width: 350px; margin-top: -130px;">
+							<img src="imgs/hero.png" alt="Imagem do aplicativo da ensinaê em um celular" title="Professores particulares" style="width: 350px; margin-top: -130px;">
 						</div>
 					</div>
 				</div>
@@ -374,15 +374,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 				<div class="container">
 					<div class="row profile">
 						<div class="col-md-4 text-center">
-							<img src="imgs/felipegimenes.jpg" alt="Felipe Gimenes" class="profile-img">
+							<img src="imgs/felipegimenes.jpg" alt="Felipe Gimenes" class="profile-img" title="Felipe Gimenes">
 							<p><a href="https://www.linkedin.com/in/felipe-almeida-gimenes-6462b36a" target="_blank">Felipe Gimenes</a></p>
 						</div>
 						<div class="col-md-4 text-center">
-							<img src="imgs/gabrielmalinosqui.jpg" alt="Gabriel Malinosqui" class="profile-img">
+							<img src="imgs/gabrielmalinosqui.jpg" alt="Gabriel Malinosqui" class="profile-img" title="Gabriel Malinosqui">
 							<p><a href="https://br.linkedin.com/in/gabriel-malinosqui-011ab56b" target="_blank">Gabriel Malinosqui</a></p>
 						</div>
 						<div class="col-md-4 text-center">
-							<img src="imgs/wellingtonsantana.jpg" alt="Wellington Santana" class="profile-img">
+							<img src="imgs/wellingtonsantana.jpg" alt="Wellington Santana" class="profile-img" title="Wellington Santana">
 							<p><a href="https://www.linkedin.com/in/wellington-cristi-vilela-santana-a48b1123" target="_blank">Wellington Santana</a></p>
 						</div>
 						<div class="col-md-4"></div>
@@ -532,11 +532,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 				</div>
 				<div class="modal-body text-center" id="modalSuccess" style="display: none;">
 					<p>Pedido realizado com sucesso, em até <b>48</b> horas retornaremos com os melhores professores particulares para você!</p>
-					<img src="imgs/success.svg" style="width: 110px" alt="">
+					<img src="imgs/success.svg" style="width: 110px" alt="" alt="Sucesso" title="Sucesso ao enviar solicitação.">
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-default" id="btnDismiss" data-dismiss="modal">cancelar</button>
-					<button type="button" class="btn btn-secondary" id="btnBuy">solicitar <img src="imgs/loading.gif" style="display: none; width: 15px;"></button>
+					<button type="button" class="btn btn-secondary" id="btnBuy">solicitar <img src="imgs/loading.gif" style="display: none; width: 15px;" alt="Carregando." title="Carregamento"></button>
 				</div>
 			</div>
 		</div>
